Fragment updated to finally job-listing

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,19 +13,28 @@
 
 <body>
 
-    <div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a th:href="@{/}" class="navbar-brand">TechJobs</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a th:href="@{/search}">Search</a></li>
-                    <li><a th:href="@{/list}">List</a></li>
-                </ul>
-            </div>
+<div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a th:href="@{/}" class="navbar-brand">TechJobs</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li th:each="action: ${actions}">
+                    <a th:href="@{'/' + ${action.key}}" th:text="${action.value}"></a>
+                </li>
+            </ul>
         </div>
     </div>
+</div>
+
+<table th:fragment="job-listing" class="job-listing" th:each="job: ${jobs}">
+    <tr th:each="mapEntry: ${job}" th:switch="${mapEntry.key}">
+        <td th:text="${#strings.capitalizeWords(mapEntry.key)}"></td>
+        <td th:case="'name'" th:text="${mapEntry.value}"></td>
+        <td th:case="*"><a th:href="@{/list/jobs(column=${mapEntry.key},value=${mapEntry.value})}" th:text="${mapEntry.value}"></a></td>
+    </tr>
+</table>
 
 </body>
 </html>
